tests/snapshots/snapshot_api_test__path_parameters.snap
---
source: tests/snapshot_api_test.rs
expression: output
---
import { http } from "../http";
export const getTestById = async (id: string) => {
    const url = `/test/${id}`;
    return http.get<any>(url);
};
