tests/snapshots/snapshot_api_test__query_parameters.snap
---
source: tests/snapshot_api_test.rs
expression: output
---
import { http } from "../http";
export const getTest = async (query?: { page?: number, limit?: number, search?: string }) => {
    const queryString = new URLSearchParams();
    if (query?.page) queryString.append("page", String(query.page));
    if (query?.limit) queryString.append("limit", String(query.limit));
    if (query?.search) queryString.append("search", String(query.search));
    const queryStr = queryString.toString();
    const url = `/test` + (queryStr ? `?${queryStr}` : '');
    return http.get<any>(url);
};
